역할/권한 관리 API 연동 및 접근 제어 구현
 - 백엔드
  - @RequiresRoot 커스텀 어노테이션 + AOP
  - (Role, Permission, Account)Countroller 접근 제어 적용
  - NoticeController @RequiresPermission 복원
  - RoleResponse에 createdAt/updatedAt 추가
  - AccountResponse에 roles/persmissionCodes 추가
  - RoleBackoffice.replacePermissions diff 기반 권한 매핑
  - SecurityConfig 접근 정책 정비
  - 역할 매핑 테스트 3건 추가

 - 프론트
  - AuthContext 도입 (/api/account/me 단일 호출 + Context 공유)
  - Role/Permission 타입 백엔드 정렬, User에 roles/permissionCodes 추가
  - /backoffice/roles 역할 목록 API 연동 + 도메인별 그룹 체크박스 재설계
  - /backoffice/users 역할 컬럼 추가
  - /backoffice/notices 공지 상세 읽기/수정 전환 + permissionCodes 기반 버튼 제어
  - Header 메뉴 권한별 필터링
  - GET /api/permission 연동